k8s/overlays/dev/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: devops-demo-dev
  labels:
    app.kubernetes.io/name: devops-k8s-demo
    app.kubernetes.io/environment: dev
